--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -12,6 +12,7 @@ env:
   S3_BUCKET_NAME: gangsan21-registered-receipt-ocr-s3-bucket
   CODE_DEPLOY_APPLICATION_NAME: Gangsan21-registered-receipt-ocr
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: Gangsan21-registered-receipt-ocr-DeployGroup
+  PROPERTIES: ${{ secrets.APPLICATIONPROPERTIES }}
   
 permissions:
   contents: read
@@ -27,12 +28,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # (2) JDK 11 세팅
+    # (2) JDK 17 세팅
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: 'adopt'
         java-version: '17'
+
+    - name: Add application.properties from Github secrets
+    - uses: actions/checkout@v2
+    - run: touch ./src/main/resources/application.properties
+    - run: echo "${{ env.PROPERTIES }}" > ./src/main/resources/application.properties
+    - uses: actions/upload-artifact@v2
+      with:
+        name: application.properties
+        path: ./src/main/resources/application.properties
     
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
