--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -29,13 +29,12 @@ jobs:
       uses: actions/checkout@v3
 
     # (2) JDK 17 세팅
-    - name: Set up JDK 17
+    - name: Set up JDK 17 & Add application.properties from Github secrets
       uses: actions/setup-java@v3
       with:
         distribution: 'adopt'
         java-version: '17'
-
-    - name: Add application.properties from Github secrets
+        
     - uses: actions/checkout@v2
     - run: touch ./src/main/resources/application.properties
     - run: echo "${{ env.PROPERTIES }}" > ./src/main/resources/application.properties
