--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -39,18 +39,18 @@ jobs:
     - uses: actions/checkout@v2
     - run: touch ./src/main/resources/application.properties
     - run: echo "${{ env.PROPERTIES }}" > ./src/main/resources/application.properties
-    - run: touch gangsan21-ocr-6e01aae86a2f.json
-    - run: echo "${{ env.JSON }}" > gangsan21-ocr-6e01aae86a2f.json
     
     - uses: actions/upload-artifact@v2
       with:
         name: application.properties
         path: ./src/main/resources/application.properties
 
-    - uses: actions/upload-artifact@v2
+    - name: create-json
+      id: create-json
+      uses: jsdaniell/create-json@1.1.2
       with:
-        name: gangsan21-ocr-6e01aae86a2f.json
-        path: gangsan21-ocr-6e01aae86a2f.json
+        name: "gangsan21-ocr-6e01aae86a2f.json"
+        json: ${{ secrets.GOOGLE_USER_JSON }}
     
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
