--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.springframework/spring-test
+	testImplementation group: 'org.springframework', name: 'spring-test', version: '6.1.2'
+
 	implementation("com.googlecode.json-simple:json-simple:1.1.1")
 
 	implementation 'org.apache.poi:poi:3.17'
@@ -37,7 +40,14 @@ dependencies {
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
 	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
 	implementation("com.google.auth:google-auth-library-oauth2-http:1.14.0")
-//	implementation("com.google.auth.")
+	//	implementation("com.google.auth.")
+
+	// https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.16.1'
+
+	// test //
+	//J_UNIT
+	implementation("junit:junit:4.13.2")
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
