--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+.DS_Store
 ### STS ###
 .apt_generated
 .classpath
@@ -22,6 +22,7 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.json
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
