--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,15 @@ dependencies {
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
 	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
 	implementation("com.google.auth:google-auth-library-oauth2-http:1.14.0")
-	//	implementation("com.google.auth.")
 
 	// https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
 	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.16.1'
+
+	// Excel
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
+
+	// WebClient
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 	// test //
 	//J_UNIT
