[Construct Info] Update ECIC Data Search and Save

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ out/
 
 
 ### Secrets ###
+secrets/
 src/main/resources/application.properties
 src/main/resources/application.yml
 src/main/java/carefree/CarefreeOCR/api/publicapi/worklist
